# msg_ptr_check

./: CMakeLists.txt  README.md  package.xml
src/: main_with_options.cpp  main_without_options.cpp  pubsub.hpp
